--- a/index.html
+++ b/index.html
@@ -10,27 +10,26 @@
   <div class="paper heart"></div>
   
   <div class="paper image">
-    <p>and I fallen in</p>
-    <p>Love with You 😍</p>
+    <p>And I'd like to</p>
+    <p>tell you about it</p>
     <img src="https://i.ibb.co/MMZRZcv/image-removebg-preview.png" />
   </div>
 
   <!-- Other paper elements... -->
 
   <div class="paper red">
-    <p class="p1">and My Favorite</p>
-    <p class="p2">Person 😍</p>
+    <p class="p1">for a long </p>
+    <p class="p2">time...</p>
   </div>
 
   <div class="paper">
-    <p class="p1">You are Cute</p>
-    <p class="p1">Amazing <span style="color: red !important;">❤️</span></p>
+    <p class="p1">I've kinda liked</p>
+    <p class="p1">you...<span style="color: red !important;">❤️</span></p>
   </div>
 
   <div class="paper">
-    <p class="p1">Drag the papers to move!<br>
-      "Just a sample code,<br>
-      I don't have any 😁"
+    <p class="p1">Drag me to move😱<br>
+      "Happy Birthday Threena!!!!"
     </p>
   </div>
   
