--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
   <div class="paper heart"></div>
   
   <div class="paper image">
-    <p>And I'd like to</p>
-    <p>tell you about it</p>
+    <p>for a long time</p>
+    <p></p>
     <img src="https://i.ibb.co/MMZRZcv/image-removebg-preview.png" />
   </div>
 
   <!-- Other paper elements... -->
 
   <div class="paper red">
-    <p class="p1">for a long </p>
-    <p class="p2">time...</p>
+    <p class="p1">that I've </p>
+    <p class="p2">liked you</p>
   </div>
 
   <div class="paper">
-    <p class="p1">I've kinda liked</p>
-    <p class="p1">you...<span style="color: red !important;">❤️</span></p>
+    <p class="p1">I just wanna </p>
+    <p class="p1">let you know...<span style="color: red !important;">❤️</span></p>
   </div>
 
   <div class="paper">
