--- a/index.html
+++ b/index.html
@@ -15,16 +15,14 @@
     <img src="https://i.ibb.co/MMZRZcv/image-removebg-preview.png" />
   </div>
 
-  <!-- Other paper elements... -->
-
   <div class="paper red">
-    <p class="p1">that I've </p>
-    <p class="p2">liked you</p>
+    <p class="p1">And it's not something that just happened this year</p>
+    <p class="p2">It has been a lingering feeling of mine for as long as I met you</p>
   </div>
 
   <div class="paper">
-    <p class="p1">I just wanna </p>
-    <p class="p1">let you know...<span style="color: red !important;">❤️</span></p>
+    <p class="p1">Thanks for everything, really</p>
+    <p class="p1">I'm sure you already know but I like u<span style="color: red !important;">❤️</span></p>
   </div>
 
   <div class="paper">
