--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
   <div class="paper heart"></div>
   
   <div class="paper image">
-    <p>for a long time</p>
-    <p></p>
+    <p>Only now has this feeling began resurfacing</p>
+    <p>And, I thought I should truly express myself</p>
     <img src="https://i.ibb.co/MMZRZcv/image-removebg-preview.png" />
   </div>
 
   <div class="paper red">
-    <p class="p1">And it's not something that just happened this year</p>
-    <p class="p2">It has been a lingering feeling of mine for as long as I met you</p>
+    <p class="p1">It's not something thats happened recently</p>
+    <p class="p2">It's been a lingering feeling of mine for as long as I met you</p>
   </div>
 
   <div class="paper">
     <p class="p1">Thanks for everything, really</p>
-    <p class="p1">I'm sure you already know but I like u<span style="color: red !important;">❤️</span></p>
+    <p class="p1">I'm sure u already know but I rlly like u<span style="color: red !important;">❤️</span></p>
   </div>
 
   <div class="paper">
