--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="paper image">
     <p>Only now has this feeling began resurfacing</p>
     <p>And, I thought I should truly express myself</p>
-    <img src="https://i.ibb.co/MMZRZcv/image-removebg-preview.png" />
+    <img src="https://raw.githubusercontent.com/KENZO577/forher/main/images/a6901f9bffa0b2e1ad7b3cba5bb4af98.png" />
   </div>
 
   <div class="paper red">
