--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
 </head>
 <body>
   <div class="paper heart"></div>
-  
+  <p>(continuation, unfortunately not a hyperlink so i type mopa😥)</p>
   <div class="paper image">
-    <p>Only now has this feeling began resurfacing</p>
-    <p>And, I thought I should truly express myself</p>
+    <p>ig suddenly this feeling began to resurface</p>
+    <p>and, I thought now I should truly express myself</p>
     <img src="https://raw.githubusercontent.com/KENZO577/forher/main/images/a6901f9bffa0b2e1ad7b3cba5bb4af98.png" />
   </div>
 
   <div class="paper red">
-    <p class="p1">It's not something thats happened recently</p>
+    <p class="p1">For as long as we met I was already interested,</p>
     <p class="p2">It's been a lingering feeling of mine for as long as I met you</p>
   </div>
 
   <div class="paper">
     <p class="p1">Thanks for everything, really</p>
-    <p class="p1">I'm sure u already know but I rlly like u<span style="color: red !important;">❤️</span></p>
+    <p class="p1">obviusly you already know but I rlly like u<span style="color: red !important;">❤️</span></p>
   </div>
 
   <div class="paper">
-    <p class="p1">Drag me to move😱<br>
+    <p class="p1">Drag me to move😱😱😱<br>
       "Happy Birthday Threena!!!!"
     </p>
   </div>
