--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
   <div class="paper heart"></div>
   <p>(😥)</p>
   <div class="paper image">
-    <p>ig suddenly this feeling began to resurface</p>
-    <p>and, I thought now I should truly express myself</p>
+    <p>Obv you already know, but I really like you</p>
+    <p>and I thought I could possibly express myself a bit...</p>
     <img src="https://raw.githubusercontent.com/KENZO577/forher/main/images/a6901f9bffa0b2e1ad7b3cba5bb4af98.png" />
   </div>
 
   <div class="paper red">
-    <p class="p1">For as long as we met I was already interested,</p>
-    <p class="p2">It's been a lingering feeling of mine for as long as I met you</p>
+    <p class="p1">and I hope for the best things to come for you. I want you to have</p>
+    <p class="p2">fun today and make the most of this once in a year experience</p>
   </div>
 
   <div class="paper">
-    <p class="p1">Thanks for everything, really</p>
-    <p class="p1">obviusly you already know but I rlly like u<span style="color: red !important;">❤️</span></p>
+    <p class="p1">Thanks for everything, really. I hope that you will enjoy this day,</p>
+    <p class="p1"> that things will turn out the way you want things to be,<span style="color: red !important;">❤️</span></p>
   </div>
 
   <div class="paper">
