--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="paper heart"></div>
-  <p>(😥)</p>
+  <a href="https://mellifluous-palmier-358893.netlify.app/">!</a> 
   <div class="paper image">
     <p>Obv you already know, but I really like you</p>
     <p>and I thought I could possibly express myself a bit...</p>
