--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <a href="https://mellifluous-palmier-358893.netlify.app/">Continue!!</a> 
   <div class="paper image">
     <p>Obv you already know, but I really like you</p>
-    <p>and I thought I could possibly express myself a bit...
-    (hanapin ang "!" mark) </p>
+    <p>and I thought I could possibly express myself a bit... </p>
     <img src="https://raw.githubusercontent.com/KENZO577/forher/main/images/a6901f9bffa0b2e1ad7b3cba5bb4af98.png" />
   </div>
 
@@ -28,7 +27,7 @@
 
   <div class="paper">
     <p class="p1">Drag me to move😱😱😱<br>
-      "Happy Birthday Threena!!!!"
+      "Happy Birthday Threena!!!! (find the exclamation mark)"
     </p>
   </div>
   
