--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="paper heart"></div>
+  <div class="paper">
   <a href="https://mellifluous-palmier-358893.netlify.app/">Continue!!</a> 
   <div class="paper image">
     <p>Obv you already know, but I really like you</p>
