--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <div class="paper heart"></div> >
   <a href="https://mellifluous-palmier-358893.netlify.app/">Continue!!</a> 
+  
   <div class="paper image">
     <p>Obv you already know, but I really like you</p>
     <p>and I thought I could possibly express myself a bit... </p>
@@ -27,7 +28,7 @@
 
   <div class="paper">
     <p class="p1">Drag me to move😱😱😱<br>
-      "Happy Birthday Threena!!!! (find the exclamation mark)"
+      "Happy Birthday Threena!!!" <br>
     </p>
   </div>
   
