--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>HBD❤️</title>
-  <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Short+Stack&amp;family=Homemade+Apple&amp;display=swap'>
-  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="paper heart"></div> >
-  <a href="https://mellifluous-palmier-358893.netlify.app/">Continue!!</a> 
-  
+  <div class="paper heart"></div>
+  <a href="https://mellifluous-palmier-358893.netlify.app/">Continue!!!!!</a> 
   <div class="paper image">
     <p>Obv you already know, but I really like you</p>
     <p>and I thought I could possibly express myself a bit... </p>
