--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,37 +6,32 @@
   <title>HBD❤️</title>
   <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Short+Stack&amp;family=Homemade+Apple&amp;display=swap'>
   <link rel="stylesheet" href="./style.css">
-
 </head>
 <body>
   <div class="paper heart"></div>
-  <a href="https://mellifluous-palmier-358893.netlify.app/">Continue!!!!!</a> 
+  <a href="https://mellifluous-palmier-358893.netlify.app/">!</a> 
   <div class="paper image">
     <p>Obv you already know, but I really like you</p>
-    <p>and I thought I could possibly express myself a bit... </p>
+    <p>and I thought I could possibly express myself a bit...</p>
     <img src="https://raw.githubusercontent.com/KENZO577/forher/main/images/a6901f9bffa0b2e1ad7b3cba5bb4af98.png" />
   </div>
-
   <div class="paper red">
     <p class="p1">and I hope for the best things to come for you. I want you to have</p>
     <p class="p2">fun today and make the most of this once in a year experience</p>
   </div>
-
   <div class="paper">
     <p class="p1">Thanks for everything, really. I hope that you will enjoy this day,</p>
     <p class="p1"> that things will turn out the way you want things to be,<span style="color: red !important;">❤️</span></p>
   </div>
-
   <div class="paper">
     <p class="p1">Drag me to move😱😱😱<br>
-      "Happy Birthday Threena!!!" <br>
+      "Happy Birthday Threena!!!!"
     </p>
   </div>
-  
+
   <script>
     // Check if the device is a mobile device
     const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
-
     // Dynamically load the appropriate script based on the device type
     const script = document.createElement('script');
     script.src = isMobile ? './mobile.js' : './script.js';
@@ -43,3 +39,15 @@
   </script>
 </body>
 </html>
+  
+  <script>
+    // Check if the device is a mobile device
+    const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+    // Dynamically load the appropriate script based on the device type
+    const script = document.createElement('script');
+    script.src = isMobile ? './mobile.js' : './script.js';
+    document.body.appendChild(script);
+  </script>
+</body>
+</html>
+
