--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="paper heart"></div>
+  <div class="paper"></div>
   <a href="https://mellifluous-palmier-358893.netlify.app/">!</a> 
   <div class="paper image">
     <p>Obv you already know, but I really like you</p>
     <p>and I thought I could possibly express myself a bit...</p>
     <img src="https://raw.githubusercontent.com/KENZO577/forher/main/images/a6901f9bffa0b2e1ad7b3cba5bb4af98.png" />
   </div>
-  <div class="paper red">
+  <div class="paper">
     <p class="p1">and I hope for the best things to come for you. I want you to have</p>
     <p class="p2">fun today and make the most of this once in a year experience</p>
   </div>
