--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>HBD❤️</title>
+  <title>A confession♡</title>
   <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Short+Stack&amp;family=Homemade+Apple&amp;display=swap'>
   <link rel="stylesheet" href="./style.css">
 </head>
@@ -16,15 +16,15 @@
   </div>
   <div class="paper">
     <p class="p1">and I hope for the best things to come for you. I want you to have</p>
-    <p class="p2">fun today and make the most of this once in a year experience</p>
+    <p class="p2">A loving bf thats me Im in my imagination dont mind you r my crush💖</p>
   </div>
   <div class="paper">
-    <p class="p1">Thanks for everything, really. I hope that you will enjoy this day,</p>
+    <p class="p1">ik its so fast but I really like you um I make sure to feel you beloved with me!</p>
     <p class="p1"> that things will turn out the way you want things to be,<span style="color: red !important;">❤️</span></p>
   </div>
   <div class="paper">
-    <p class="p1">Drag me to move😱😱😱<br>
-      "Happy Birthday Threena!!!!"
+    <p class="p1">Drag me to move💕<br>
+      "Im obsessed withh youu!!!!"
     </p>
   </div>
 
